--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -2,14 +2,19 @@
 <a href="{% url 'events:create' %}">Create New Event</a>
 <ul>
 
+<form method="get" action="{% url 'events:index' %}">
+    <input type="text" name="q" placeholder="Search events by title..." value="{{ request.GET.q }}">
+    <button type="submit">Search</button>
+</form>
+
 {% if events_list %}
     <ul>
     {% for event in events_list %}
-        <li><a href="{% url 'events:detail' event.id %}">{{ event.title }}</a></li>
+        <li><a href="{% url 'events:detail' event.pk %}">{{ event.title }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
-    <p>No events are available.</p>
+    <p>No events found.</p>
 {% endif %}
 
 {% if user.is_authenticated %}
